--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                               <div class="info">
                                 <a href="file:///C:/Users/user/Downloads/Organic%20Chemistry,%20John%20E.%20McMurry.pdf" class="btn custom-btn me-3" target="_blank">More info</a>
   
-                                  <button type="button" class="love" data-book-id="book7">
+                                  <button type="button" class="love" data-book-id="book7" id="lo">
                                       <i class="fa-regular fa-heart"></i> <!-- empty heart -->
                                   </button>
                               </div>
@@ -462,7 +462,7 @@
                                    class="d-block w-100" alt="Book 9"style="width: 20rem;height: 15rem;">
                               <div class="info">
                                   <a href="file:///C:/Users/user/Downloads/2.%20Applied%20Ecology%20Author%20WikiBooks%20(1).pdf" class="btn custom-btn smoothscroll me-3">More info</a>
-                                  <button type="button" class="love" data-book-id="book9">
+                                  <button type="button" class="love" data-book-id="book9" id="book9">
                                       <i class="fa-regular fa-heart"></i> <!-- empty heart -->
                                   </button>
                               </div>
@@ -476,7 +476,7 @@
                                    class="d-block w-100" alt="Book 10"style="width: 20rem;height: 15rem;">
                               <div class="info">
                                   <a href="file:///C:/Users/user/Downloads/Biochemistry,%20Christa%20van%20Tellingen.pdf" class="btn custom-btn smoothscroll me-3">More info</a>
-                                  <button type="button" class="love" data-book-id="book10">
+                                  <button type="button" class="love" data-book-id="book10" id="book10">
                                       <i class="fa-regular fa-heart"></i> <!-- empty heart -->
                                   </button>
                               </div>
@@ -486,7 +486,7 @@
                                    class="d-block w-100" alt="Book 11"style="width: 20rem;height: 15rem;">
                               <div class="info">
                                   <a href="file:///C:/Users/user/Downloads/Routledge%20Handbook%20of%20Chinese%20Medicine,%20Vivienne%20Lo,%20Michael%20Stanley-Baker.pdf" class="btn custom-btn smoothscroll me-3">More info</a>
-                                  <button type="button" class="love" data-book-id="book11">
+                                  <button type="button" class="love" data-book-id="book11" id="book11">
                                       <i class="fa-regular fa-heart"></i> <!-- empty heart -->
                                   </button>
                               </div>
@@ -496,7 +496,7 @@
                                  class="d-block w-100" alt="Book 11"style="width: 20rem;height: 15rem;">
                             <div class="info">
                                 <a href="file:///C:/Users/user/Downloads/5.%20Mind%20power%20the%20secret%20of%20mental%20magic%20Author%20William%20Walker%20Atkinson.pdf" class="btn custom-btn smoothscroll me-3">More info</a>
-                                <button type="button" class="love" data-book-id="book11">
+                                <button type="button" class="love" data-book-id="book11" id="book11">
                                     <i class="fa-regular fa-heart"></i> <!-- empty heart -->
                                 </button>
                             </div>
@@ -506,7 +506,7 @@
                                    class="d-block w-100" alt="Book 12"style="width: 20rem;height: 15rem;">
                               <div class="info">
                                   <a href="https://ia801801.us.archive.org/15/items/the-great-gatsby_202101/TheGreatGatsby.pdf" class="btn custom-btn smoothscroll me-3">More info</a>
-                                  <button type="button" class="love" data-book-id="book12">
+                                  <button type="button" class="love" data-book-id="book12" id="book12">
                                       <i class="fa-regular fa-heart"></i> <!-- empty heart -->
                                   </button>
                               </div>
@@ -653,6 +653,7 @@
           </div>
         </div>
       </section>
+    
     </main>
 
     <!-- JAVASCRIPT FILES -->
